# Nimbus-Service

android/app/: build.gradle.kts
android/app/src/androidTest/java/com/bemos/nimbus/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/bemos/nimbus/: MainActivity.kt
android/app/src/main/res/drawable/: avd_icon.xml  ic_launcher_foreground.xml  icon_without_background.xml  snowman.xml  snowman_head.xml
android/app/src/main/res/values/: ic_launcher_background.xml  splash_screen_theme.xml  themes.xml
android/app/src/test/java/com/bemos/nimbus/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
backend/: Dockerfile  Taskfile.yaml  pyproject.toml
backend/docker/: local-docker-compose.yml
backend/env/: local.sh
backend/src/app/: __init__.py  builder.py
backend/src/app/api/http/v1/: __init__.py  files.py  users.py
backend/src/app/core/: __init__.py  local_file_manager.py
backend/src/app/models/v1/: file.py  user.py
backend/src/app/repositories/: providers.py
backend/src/app/repositories/file/: __init__.py
backend/src/app/repositories/file/v1/: create_one.py  delete_one.py  find_all.py  find_one.py
backend/src/app/repositories/user/: __init__.py
backend/src/app/repositories/user/v1/: create_one.py
backend/src/app/services/: providers.py
backend/src/app/services/local_file_manager/: __init__.py
backend/src/app/services/local_file_manager/v1/: delete_file.py  get_file.py  list_files.py  save_file.py
(+42 files in other folders)
