[tool.poetry]
name = "Nimbus Service"
version = "0.1.1"
description = "Nimbus Service"
authors = ["max1t1a <max1t1aldan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
passlib = "^1.7.4"
aiofiles = "^24.1.0"
argon2-cffi = "^23.1.0"
python-multipart = "^0.0.20"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.9.1"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = 3.13
warn_return_any = true
ignore_missing_imports = true
warn_unused_configs = true

[mypy-google.protobuf]
ignore_missing_imports = true
